z-index bug

--- a/builder/css/base/_grid.scss
+++ b/builder/css/base/_grid.scss
@@ -24,6 +24,8 @@ html {
 		left: 0px;
 		position: absolute;
 		top: 0px;
+		z-index: -1;
+
 	}
 }
 
