--- a/builder/css/dashboard-style.css
+++ b/builder/css/dashboard-style.css
@@ -606,7 +606,8 @@ html {
     background-size: cover;
     left: 0px;
     position: absolute;
-    top: 0px; }
+    top: 0px;
+    z-index: -1; }
 
 .karma-container {
   margin-right: auto;
